# EyeTracker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-on-windows.yml
include/: app_engine.h  main_window.h  mainwindow.h  widgets.h
source/: app_engine.cpp  main.cpp  main_window.cpp  mainwindow.cpp  widgets.cpp
ui/: mainwindow.ui
